--- a/templates/tango-icons.css
+++ b/templates/tango-icons.css
@@ -182,8 +182,8 @@
 .tango-system-users { background-position: 0px -11328px; }
 .tango-tab-new { background-position: 0px -11392px; }
 .tango-text-html { background-position: 0px -11456px; }
-.tango-text-x-generic-template { background-position: 0px -11520px; }
-.tango-text-x-generic { background-position: 0px -11584px; }
+.tango-text-x-generic { background-position: 0px -11520px; }
+.tango-text-x-generic-template { background-position: 0px -11584px; }
 .tango-text-x-script { background-position: 0px -11648px; }
 .tango-user-desktop { background-position: 0px -11712px; }
 .tango-user-home { background-position: 0px -11776px; }
